--- a/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
+++ b/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
@@ -16,24 +16,25 @@
             <ColumnDefinition Width="55*"/>
         </Grid.ColumnDefinitions>
         <ListBox x:Name="LS_window_ListBox_input" HorizontalAlignment="Left" Height="289" Margin="30,36,0,0" VerticalAlignment="Top" Width="119" Background="#FFFCF9F9" SelectionChanged="LS_window_ListBox_SelectionChanged"/>
-        <Label Content="Входные вектора" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Width="119" FontStretch="Expanded" FontFamily="Times New Roman" FontSize="14" Height="26"/>
+        <Label Content="Вектора" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Width="119" FontStretch="Expanded" FontFamily="Times New Roman" FontSize="14" Height="26"/>
         <DockPanel Height="77" Margin="0,1,-2,0" VerticalAlignment="Top" AutomationProperties.IsOffscreenBehavior="Offscreen" LastChildFill="False" FlowDirection="RightToLeft" Background="#B2F9F9F9" Grid.Row="1" Grid.ColumnSpan="2">
             <Button x:Name="Exit_button" Content="Выход" Height="34" VerticalAlignment="Center" Width="112" Margin="28,16,0,18" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Exit_button_Click"/>
             <Button x:Name="Next_button" Content="Далее" Height="34" VerticalAlignment="Center" Width="112" Margin="68,16,0,18" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Next_button_Click"/>
             <Button x:Name="About_button" Content="О программе" Height="34" VerticalAlignment="Center" Width="112" Margin="64,16,15,18" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
             <Button x:Name="Back_button" Content="Назад" Height="34" VerticalAlignment="Center" Width="112" Margin="37,20.5,0,22.5" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Back_button_Click" />
         </DockPanel>
-        <GroupBox Grid.Column="1" Header="Свойства" HorizontalAlignment="Left" Height="315" Margin="10,10,0,0" VerticalAlignment="Top" Width="558" FontFamily="Times New Roman" FontSize="14">
-            <Grid HorizontalAlignment="Left" Height="296" VerticalAlignment="Top" Width="548" Margin="0,0,-2,-4">
+        <GroupBox Grid.Column="1" Header="Свойства" HorizontalAlignment="Left" Height="315" Margin="10,10,0,0" VerticalAlignment="Top" Width="585" FontFamily="Times New Roman" FontSize="14">
+            <Grid HorizontalAlignment="Left" Width="575" Margin="0,0,-2,-4">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="53*"/>
-                    <RowDefinition Height="95*"/>
+                    <RowDefinition Height="97*"/>
+                    <RowDefinition Height="199*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="58*"/>
-                    <ColumnDefinition Width="79*"/>
+                    <ColumnDefinition Width="190*"/>
+                    <ColumnDefinition Width="190*"/>
+                    <ColumnDefinition Width="190*"/>
                 </Grid.ColumnDefinitions>
-                <StackPanel x:Name="Normolize_Stack_Panel" HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="212">
+                <StackPanel x:Name="Normolize_Stack_Panel" HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="168">
                     <StackPanel.BindingGroup>
                         <BindingGroup Name="Normolize"/>
                     </StackPanel.BindingGroup>
@@ -41,11 +42,21 @@
                     <RadioButton x:Name="MinMax_Nor_radioButton" Content="(X-MIN)/(MAX-MIN)" Margin="0,4,0,0" IsChecked="True" GroupName="Normolize"/>
                     <RadioButton Content="RadioButton" Margin="0,5,0,0" GroupName="Normolize"/>
                 </StackPanel>
-                <StackPanel x:Name="LayersOfMLP" HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="296" Grid.Column="1">
+                <StackPanel x:Name="LayersOfMLP" HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="172" Grid.Column="1">
                     <StackPanel.BindingGroup>
                         <BindingGroup Name="Normolize"/>
                     </StackPanel.BindingGroup>
-                    <Label Content="Слои Нейронной сети" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
+                    <Label Content="Значение" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
+                    <RadioButton x:Name="Input_vector_RadioButton" Content="Входной вектор" GroupName="Target" Margin="0,4,0,0" Checked="Input_vector_RadioButton_Checked"/>
+                    <RadioButton x:Name="Target_vector_radioButton" Content="Целевой вектор" GroupName="Target" Margin="0,4,0,0" Checked="Target_vector_radioButton_Checked"/>
+                    <RadioButton x:Name="NotUsed_vector_radioButton" Content="Не использовать" GroupName="Target" Margin="0,4,0,0" Checked="NotUsed_vector_radioButton_Checked"/>
+                </StackPanel>
+                <StackPanel x:Name="LayersOfMLP_Copy" HorizontalAlignment="Left" Height="86" Margin="10,10,0,0" VerticalAlignment="Top" Width="172" Grid.Column="2">
+                    <StackPanel.BindingGroup>
+                        <BindingGroup
+                            Name="Normolize"/>
+                    </StackPanel.BindingGroup>
+                    <Label Content="Слои" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
