--- a/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
+++ b/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
@@ -56,7 +56,16 @@
                         <BindingGroup
                             Name="Normolize"/>
                     </StackPanel.BindingGroup>
-                    <Label Content="Слои" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
+                    <Label x:Name="Layers_label" Content="Слои" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
+                    <StackPanel x:Name="Count_of_secret_layers" MaxHeight="50" Orientation="Horizontal" HorizontalAlignment="Right">
+                        <Label x:Name="Secret_layers" HorizontalAlignment="Right" Content="Скрытые слои:" Margin="0,0,19,0"/>
+                        <TextBox x:Name="SecretLayers_textBox" Height="23" TextWrapping="Wrap" MaxWidth="120" HorizontalAlignment="Right" Margin="0,2,1,0" Width="52" TextChanged="SecretLayers_textBox_TextChanged" PreviewTextInput="SecretLayers_textBox_PreviewTextInput"/>
+                    </StackPanel>
+                    <Button x:Name="CreationLayers" Content="Создать слои" Click="Button_Click"/>
+                </StackPanel>
+                <StackPanel Grid.ColumnSpan="3" HorizontalAlignment="Left" Height="199" Margin="10,0.4,0,-0.2" Grid.Row="1" VerticalAlignment="Top" Width="555">
+                    <Label x:Name="Secret_Label" Content="Скрыте слои и функции активации" HorizontalAlignment="Center" BorderThickness="0,0,0,1" BorderBrush="Black" Padding="5,5,5,3"/>
+                    <ListBox x:Name="SecretLayers_ListBox" Height="159" Margin="0,2,0.2,0"/>
                 </StackPanel>
             </Grid>
         </GroupBox>
