--- a/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
+++ b/WPF_Main/Components/Forms/LearningSet/LearningSet_window.xaml
@@ -18,9 +18,8 @@
         <ListBox x:Name="LS_window_ListBox_input" HorizontalAlignment="Left" Height="289" Margin="30,36,0,0" VerticalAlignment="Top" Width="119" Background="#FFFCF9F9" SelectionChanged="LS_window_ListBox_SelectionChanged"/>
         <Label Content="Вектора" HorizontalAlignment="Left" Margin="30,10,0,0" VerticalAlignment="Top" Width="119" FontStretch="Expanded" FontFamily="Times New Roman" FontSize="14" Height="26"/>
         <DockPanel Height="77" Margin="0,1.4,-2.4,0" VerticalAlignment="Top" AutomationProperties.IsOffscreenBehavior="Offscreen" LastChildFill="False" FlowDirection="RightToLeft" Background="#B2F9F9F9" Grid.Row="1" Grid.ColumnSpan="2">
-            <Button x:Name="Exit_button" Content="Выход" Height="34" VerticalAlignment="Center" Width="112" Margin="28,16,0,18" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Exit_button_Click"/>
             <Button x:Name="Next_button" Content="Далее" Height="34" VerticalAlignment="Center" Width="112" Margin="68,16,0,18" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Next_button_Click"/>
-            <Button x:Name="About_button" Content="Функции Активации" Height="34" VerticalAlignment="Center" Width="154" Margin="64,20,15,22.8" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
+            <Button x:Name="About_button" Content="Функции Активации" Height="34" VerticalAlignment="Center" Width="150" Margin="64,20,15,23" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
             <Button x:Name="Back_button" Content="Назад" Height="34" VerticalAlignment="Center" Width="112" Margin="37,20.5,0,22.5" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Back_button_Click" />
         </DockPanel>
         <GroupBox Grid.Column="1" Header="Свойства" HorizontalAlignment="Left" Height="315" Margin="8.2,10,0,0" VerticalAlignment="Top" Width="607" FontFamily="Times New Roman" FontSize="14">
@@ -59,7 +58,7 @@
                     <Label x:Name="Layers_label" Content="Слои" BorderThickness="0,0,0,1" BorderBrush="#BF636363" Padding="5,5,5,1"/>
                     <StackPanel x:Name="Count_of_secret_layers" MaxHeight="50" Orientation="Horizontal" HorizontalAlignment="Right">
                         <Label x:Name="Secret_layers" HorizontalAlignment="Right" Content="Скрытые слои:" Margin="0,0,13,0"/>
-                        <TextBox x:Name="SecretLayers_textBox" Height="23" TextWrapping="Wrap" MaxWidth="120" HorizontalAlignment="Right" Margin="0,2,7,0" Width="52" PreviewTextInput="SecretLayers_textBox_PreviewTextInput" TextChanged="SecretLayers_textBox_TextChanged" KeyDown="SecretLayers_textBox_KeyDown"/>
+                        <TextBox x:Name="SecretLayers_textBox" Height="23" TextWrapping="Wrap" MaxWidth="120" HorizontalAlignment="Right" Margin="0,2,7,0" Width="52" PreviewTextInput="SecretLayers_textBox_PreviewTextInput" TextChanged="SecretLayers_textBox_TextChanged" KeyDown="SecretLayers_textBox_KeyDown" MouseLeftButtonDown="SecretLayers_textBox_MouseLeftButtonDown"/>
                     </StackPanel>
                     <Button x:Name="CreationLayers_button" Content="Создать слои" Click="Button_Click" Margin="0,4,0,0"/>
                 </StackPanel>
