--- a/WPF_Main/Components/Forms/Training/Training_window.xaml
+++ b/WPF_Main/Components/Forms/Training/Training_window.xaml
@@ -1,45 +1,46 @@
-﻿<Window x:Name="Training_window" x:Class="WPF_Main.Components.Forms.Training.Training_window"
+﻿<Window x:Name="Training_Window" x:Class="WPF_Main.Components.Forms.Training.Training_window"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Main.Components.Forms.Training"
         mc:Ignorable="d"
-        Title="Training_window" Height="450" Width="800" Activated="Window_Activated">
+        Title="Обучение" Height="450" Width="800" Activated="Window_Activated" FontFamily="Times New Roman" FontSize="14" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"/>
             <ColumnDefinition Width="41*"/>
         </Grid.ColumnDefinitions>
-        <GroupBox Header="Обучение&#xD;&#xA;" HorizontalAlignment="Left" Height="329" Margin="10,10,0,0" VerticalAlignment="Top" Width="280" FontFamily="Times New Roman" FontSize="14">
-            <StackPanel x:Name="Params_of_learning" HorizontalAlignment="Left" Height="305" VerticalAlignment="Top" Width="270" Margin="0,-10,-2,-5">
+        <GroupBox x:Name="Learning_params_groupBox" Header="" HorizontalAlignment="Left" Height="329" Margin="10,10,0,0" VerticalAlignment="Top" Width="280" FontFamily="Times New Roman" FontSize="14" AutomationProperties.IsOffscreenBehavior="Offscreen" Panel.ZIndex="-10">
+            <StackPanel x:Name="Params_of_learning" HorizontalAlignment="Left" Height="318" VerticalAlignment="Top" Width="270" Margin="0,-10,-2,-2.4">
                 <StackPanel x:Name="Params_learning_stackPanel" Height="108">
                     <Label x:Name="Params_learning_label" Content="Параметры обучения" VerticalAlignment="Center" BorderBrush="Black" BorderThickness="0,0,0,1" Margin="10,0" Width="250" HorizontalContentAlignment="Center"/>
                     <StackPanel x:Name="TrainingSample_stackPanel" Height="26" Orientation="Horizontal">
                         <Label x:Name="For_testing_label" Content="Для тестирования %
 "/>
-                        <TextBox x:Name="ForTesting_textBox" TextWrapping="Wrap" Text="TextBox" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" PreviewTextInput="ForTesting_textBox_PreviewTextInput" TextChanged="ForTesting_textBox_TextChanged"/>
+                        <TextBox x:Name="ForTesting_textBox" TextWrapping="Wrap" Text="80" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" PreviewTextInput="ForTesting_textBox_PreviewTextInput" TextChanged="ForTesting_textBox_TextChanged" Margin="50,0,0,0"/>
                     </StackPanel>
                     <StackPanel Height="26" Orientation="Horizontal">
                         <Label Content="Кол-во эмулируемых НС:"/>
-                        <TextBox x:Name="CountOfNets_textBox" TextWrapping="Wrap" Text="TextBox" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <TextBox x:Name="CountOfNets_textBox" TextWrapping="Wrap" Text="1" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="23,0,0,0" PreviewTextInput="CountOfNets_textBox_PreviewTextInput" TextChanged="CountOfNets_textBox_TextChanged"/>
                     </StackPanel>
                     <StackPanel Height="26" Orientation="Horizontal">
                         <Label Content="Скорость обучения:"/>
-                        <TextBox x:Name="learninTemp_textBox" TextWrapping="Wrap" Text="TextBox" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        <TextBox x:Name="learninTemp_textBox" TextWrapping="Wrap" Text="0,01" Width="80" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="57,0,0,0" TextChanged="learninTemp_textBox_TextChanged"/>
                     </StackPanel>
                 </StackPanel>
                 <StackPanel x:Name="Stop_stackPanel" Height="79">
                     <Label x:Name="Stop_label" Content="Условия остановки" HorizontalContentAlignment="Center" BorderBrush="Black" BorderThickness="0,0,0,1" HorizontalAlignment="Center" Margin="10,0,10,2" Width="250"/>
-                    <StackPanel x:Name="Epoch_stackPanel" Height="27" Orientation="Horizontal">
-                        <Label x:Name="Epoch_label" Content="Эпохи:" Width="68"/>
-                        <TextBox x:Name="Epoch_textBox" TextWrapping="Wrap" Text="10000" Width="66" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,4,0,5" HorizontalAlignment="Center" FlowDirection="RightToLeft"/>
+                    <StackPanel x:Name="Epoch_stackPanel" Height="27" Orientation="Horizontal" VerticalAlignment="Center">
+                        <CheckBox x:Name="Epoch_checkBox" Content="Эпохи:" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,5,0" Checked="Epoch_checkBox_Checked" Unchecked="Epoch_checkBox_Unchecked"/>
+                        <TextBox x:Name="Epoch_textBox" TextWrapping="Wrap" Text="10000" Width="66" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,5" HorizontalAlignment="Center" PreviewTextInput="Epoch_textBox_PreviewTextInput" IsEnabled="False" TextChanged="Epoch_textBox_TextChanged"/>
                     </StackPanel>
                     <StackPanel x:Name="Cost_stackPanel" Height="26" Orientation="Horizontal">
-                        <Label x:Name="Epoch_label1" Content="Ошибка:" Width="68"/>
-                        <TextBox x:Name="Cost_textBox" TextWrapping="Wrap" Text="10000" Width="66" HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,4,0,5"/>
+                        <CheckBox x:Name="Cost_checkBox" Content="Ошибка:" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,5,0" Checked="Cost_checkBox_Checked" Unchecked="Cost_checkBox_Unchecked"/>
+                        <TextBox x:Name="Cost_textBox" TextWrapping="Wrap" Text="0,5" Width="66" HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,4,0,5" PreviewTextInput="Cost_textBox_PreviewTextInput" IsEnabled="False" TextChanged="Cost_textBox_TextChanged"/>
                     </StackPanel>
                 </StackPanel>
+                <Button x:Name="StartLearning_button" Content="Обучить" Height="30" Margin="0,0,0.4,0" Click="StartLearning_button_Click"/>
             </StackPanel>
         </GroupBox>
         <DockPanel Height="77" Margin="0,344.4,-4.4,-2.4" VerticalAlignment="Top" AutomationProperties.IsOffscreenBehavior="Offscreen" LastChildFill="False" FlowDirection="RightToLeft" Background="#B2F9F9F9" Grid.ColumnSpan="2">
@@ -47,6 +48,7 @@
             <Button x:Name="About_button" Content="Об обучении" Height="34" VerticalAlignment="Center" Width="150" Margin="64,20,15,23" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
             <Button x:Name="Back_button" Content="Назад" Height="34" VerticalAlignment="Center" Width="112" Margin="37,20.5,0,22.5" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Back_button_Click" />
         </DockPanel>
+        <GroupBox x:Name="Learning_nets_groupBox" Grid.Column="1" Header="Обучение" HorizontalAlignment="Left" Height="329" Margin="10.2,10,0,0" VerticalAlignment="Top" Width="473" FontFamily="Times New Roman" FontSize="14" Panel.ZIndex="-10"/>
 
     </Grid>
 </Window>
