Add async Learning

--- a/WPF_Main/Components/Forms/Training/Training_window.xaml
+++ b/WPF_Main/Components/Forms/Training/Training_window.xaml
@@ -4,8 +4,8 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_Main.Components.Forms.Training"
-        mc:Ignorable="d"
-        Title="Обучение" Height="450" Width="800" Activated="Window_Activated" FontFamily="Times New Roman" FontSize="14" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+         mc:Ignorable="d"
+        Title="Обучение" Height="450" Width="800" Activated="Window_Activated" FontFamily="Times New Roman" FontSize="14" ResizeMode="NoResize" WindowStartupLocation="CenterScreen" ContentRendered="Training_Window_ContentRendered">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"/>
@@ -40,7 +40,8 @@
                         <TextBox x:Name="Cost_textBox" TextWrapping="Wrap" Text="0,5" Width="66" HorizontalAlignment="Right" VerticalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Margin="0,4,0,5" PreviewTextInput="Cost_textBox_PreviewTextInput" IsEnabled="False" TextChanged="Cost_textBox_TextChanged"/>
                     </StackPanel>
                 </StackPanel>
-                <Button x:Name="StartLearning_button" Content="Обучить" Height="30" Margin="0,0,0.4,0" Click="StartLearning_button_Click"/>
+                <Button x:Name="StartLearning_button" Content="Обучить" Height="30" Margin="0,3,0.4,5" Click="StartLearning_button_Click"/>
+                <Button x:Name="StopLearning_button"  Content="Остановить обучение" Height="33" Margin="0,0,0.4,0" Click="StopLearning_button_Click"/>
             </StackPanel>
         </GroupBox>
         <DockPanel Height="77" Margin="0,344.4,-4.4,-2.4" VerticalAlignment="Top" AutomationProperties.IsOffscreenBehavior="Offscreen" LastChildFill="False" FlowDirection="RightToLeft" Background="#B2F9F9F9" Grid.ColumnSpan="2">
@@ -48,7 +49,19 @@
             <Button x:Name="About_button" Content="Об обучении" Height="34" VerticalAlignment="Center" Width="150" Margin="64,20,15,23" HorizontalAlignment="Center" DockPanel.Dock="Right" FontFamily="Times New Roman" FontSize="16" Click="About_button_Click"/>
             <Button x:Name="Back_button" Content="Назад" Height="34" VerticalAlignment="Center" Width="112" Margin="37,20.5,0,22.5" HorizontalAlignment="Center" FontFamily="Times New Roman" FontSize="16" Click="Back_button_Click" />
         </DockPanel>
-        <GroupBox x:Name="Learning_nets_groupBox" Grid.Column="1" Header="Обучение" HorizontalAlignment="Left" Height="329" Margin="10.2,10,0,0" VerticalAlignment="Top" Width="473" FontFamily="Times New Roman" FontSize="14" Panel.ZIndex="-10"/>
+        <GroupBox x:Name="Learning_nets_groupBox" Grid.Column="1" Header="Обучение" HorizontalAlignment="Left" Height="329" Margin="10.2,10,0,0" VerticalAlignment="Top" Width="473" FontFamily="Times New Roman" FontSize="14" Panel.ZIndex="-10">
+            <ListBox x:Name="Learning_ListBox" HorizontalAlignment="Left" Height="310" VerticalAlignment="Top" Width="463" Margin="0,0,-2.2,-4.4">
+                <ListBoxItem x:Name="CurrParams_ListBoxItem" Height="30" HorizontalContentAlignment="Center" BorderBrush="Black" BorderThickness="0,0,0,1" Margin="3,0,3,0">
+                    <StackPanel Orientation="Horizontal">
+                        <Label x:Name="CurrEpoch_label"  Content="Текущая эпоха:" Width="104"/>
+                        <Label Name="CurrEpochNum_label" Width="60" />
+                        <Label x:Name="CurrError_label" Content="Средняя ошибка на эпохе:" Width="170"/>
+                        <Label Name="CurrErrorNum_label" Width="60" />
+                    </StackPanel>
+                </ListBoxItem>
+                
+            </ListBox>
+        </GroupBox>
 
     </Grid>
 </Window>
